Collection menu and listing changes

--- a/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
@@ -48,16 +48,19 @@ $currentUrl = Mage::helper('core/url')->getCurrentUrl();
 <div class="cate-open-close">
 <a class="opener attribure_labels" data-id="collection-mega-menu"> View All</a>
 <ul id="collection-mega-menu" class="slide m-filter-item-list">
+    <?php $attr = Mage::getModel('eav/config')->getAttribute('catalog_product', 'universal_categories'); ?>
+
+<li>
+   <a href="<?php echo Mage::getBaseUrl() . "clothing/men.html" ?>">View All</a>
+</li>
     <?php foreach ($_attrbiuteCollection as $a): ?>
         <li>
-            <?php if ($a['value']): ?>
-                <a href="<?php echo Mage::getBaseUrl() . "clothing.html/?universal_categories=".$a['value']."" ?>"><?php echo $a['label']; ?></a>
-            <?php else: 
-			?>
-            <a href="<?php echo Mage::getBaseUrl() . "clothing.html" ?>">View All</a>
-            <?php endif; ?>
+
+                <a href="<?php echo Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a."" ?>"><?php echo $attr->getSource()->getOptionText($a); ?></a>
+                        
         </li>
     <?php endforeach ?>
+
 </ul>
 </div>
 </div>
@@ -214,31 +217,23 @@ $_helper = $this->helper('catalog/output');
 <div class="design_categories_attributes shipping-methods">
 <h3><span>DESIGN CATEGORIES</span></h3>
 <ul>
-    <?php foreach ($_attrbiuteCollection as $a): ?>
-
-            <?php if ($a['value']): ?>
-            <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a['value']); ?>
+ <?php foreach ($_attrbiuteCollection as $a): ?>
+            <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a); ?>
             <?php
-			$imgurl =  $this->escapeHtml($_img);
-			if(!$_img){
-				continue;
-				}
-			?>
+            $imgurl =  $this->escapeHtml($_img);
+            if(!$_img){
+                continue;
+                }
+            ?>
         <li>
-	            <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a['value']); ?>
-				<a href="<?php echo Mage::getBaseUrl() . "clothing.html/?universal_categories=".$a['value']."" ?>">
-				<?php if ($_img): ?>
-                    <img src="<?php echo $this->escapeHtml($_img); ?>" alt="<?php echo $a['label']; ?>" />
+                <?php $_img = $this->helper('bubble_aop')->getAttributeOptionImage($a); ?>
+                <a href="<?php echo Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a."" ?>">
+                <?php if ($_img): ?>
+                    <img src="<?php echo $this->escapeHtml($_img); ?>" alt="" />
                 <?php endif; ?>
                 
                 <?php // echo $a['label']; ?></a>
-                
-            <?php else: 
-			?>
-           <?php /*?> <a href="<?php echo Mage::getBaseUrl() . "clothing.html" ?>">View All</a><?php */?>
-         
-        </li>
-            <?php endif; ?> 
+                 
     <?php endforeach ?>
 </ul>
 </div>
