--- a/app/design/frontend/creo/default/template/pdp/customer/design_list.phtml
+++ b/app/design/frontend/creo/default/template/pdp/customer/design_list.phtml
@@ -50,7 +50,7 @@
 			<td><?php echo nl2br($_obj->getDesignNote()) ?></td>
             <td><?php echo $_obj->getCreatedTime() ?></td>
 			<td>
-                <?php /*?> <a target="_blank" href="<?php echo $designLink ?>"><?php echo $this->__("Edit") ?></a> | <?php */ ?>
+                <a target="_blank" href="<?php echo $designLink ?>"><?php echo $this->__("Edit") ?></a> | 
                 <a id="delete_<?php echo $_obj->getId() ?>" onclick="deleteDesign(this)"><?php echo $this->__("Delete") ?></a>
             </td>
         </tr>
