Fixing edit link

--- a/app/design/frontend/creo/default/template/pdp/customer/design_list.phtml
+++ b/app/design/frontend/creo/default/template/pdp/customer/design_list.phtml
@@ -37,7 +37,7 @@
             ?>
             <td>
                 <p style="display:none;">
-                	<?php echo $productId; print_r($productId); ?>
+                	<?php echo $productId; print_r($_obj); ?>
                 </p>
                 <span class="design-title"><?php echo $_obj->getDesignTitle() ?></span>
                 <div class="design-preview">
