product listing sort order and product detail fix

--- a/app/design/frontend/creo/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list.phtml
@@ -219,10 +219,9 @@ if ($_product->type_id == 'configurable' && $_GET['styles']==22) {
         <?php endif; ?>
 
         <div class="toolbar-bottom">
-            <?php echo $this->getToolbarHtml() ;
-			
-				echo $this->getToolbarBlock()->setTemplate('catalog/product/list/toolbar-bottom.phtml')->toHtml() ;
-			?>
+        <?php //echo $this->getToolbarHtml() ;
+        echo $this->getToolbarBlock()->setTemplate('catalog/product/list/toolbar-bottom.phtml')->toHtml();
+        ?>
         </div>
     </div>
 <?php endif; ?>
