--- a/app/design/frontend/creo/default/template/whoalsoview/mostviewed.phtml
+++ b/app/design/frontend/creo/default/template/whoalsoview/mostviewed.phtml
@@ -30,10 +30,10 @@ if(count($_productCollection)){ ?>
             <!--div class="container"-->
              <!--div class="row"-->
               <!-- <div class="sliderbox"> -->
-                <ul  id="owl-demo" class="owl-carousel" style="display:block;">
+                <div  id="owl-demo" class="owl-carousel">
                 <?php $i=0; foreach ($_productCollection as $key => $_product): ?>
                  <?php if ($key < $display_length && ($showInStock == $_product->isAvailable() || 1 == $_product->isAvailable())): ?>
-                    <li class="item<?php if($key==0): ?> first<?php elseif($key==$_collectionSize): ?> last<?php endif; ?>">
+                    <div class="item<?php if($key==0): ?> first<?php elseif($key==$_collectionSize): ?> last<?php endif; ?>">
                         <a href="<?php echo $site_url.$_product->getUrlPath(); ?>" title="<?php echo $this->htmlEscape($this->getImageLabel($_product, 'small_image')) ?>" class="product-image image-area"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image'); ?>" alt="<?php echo $this->htmlEscape($this->getImageLabel($_product, 'small_image')) ?>" /></a>
                         <div class="text-area">
                         <h3><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->htmlEscape($_product->getName()) ?>"><?php echo $this->htmlEscape($_product->getName()) ?></a></h3>
@@ -59,10 +59,10 @@ if(count($_productCollection)){ ?>
                         </div>
 
                         </div>
-                    </li>
+                    </div>
                   <?php endif ?>
                 <?php endforeach ?>
-                </ul>
+                </div>
                 <script type="text/javascript">decorateGeneric($$('ul.products-grid'), ['odd','even','first','last'])</script>
              <!-- </div> -->
             <!--/div-->
