customer who also viewed fix

--- a/skin/frontend/creo/default/css/whoalsoview/styles.css
+++ b/skin/frontend/creo/default/css/whoalsoview/styles.css
@@ -39,9 +39,10 @@
 	-o-transition: height 500ms ease-in-out;
 	transition: height 500ms ease-in-out;
 }
-	
+
 .owl-carousel .owl-item{
 	float: left;
+	margin:0 4px;
 }
 .owl-controls .owl-page,
 .owl-controls .owl-buttons div{
