--- a/app/design/frontend/creo/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/footer.phtml
@@ -25,62 +25,73 @@
  */
 ?>
 <footer id="footer">
-					<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<div class="right-area">
-                            <?php // echo $this->getChildHtml('newsletter'); ?>
-                            <?php echo $this->getChildHtml() ?>
+<div class="row">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	<div class="right-area">
+    <?php // echo $this->getChildHtml('newsletter'); ?>
+    <?php echo $this->getChildHtml() ?>
 <!--								<form class="footer-form" action="#">
-									<span class="title">Join us for 20% off your first order</span>
-									<div class="form-row">
-									nn	<input type="text" placeholder="Email Address">
-										<input type="submit" value="JOIN">
-									</div>
-								</form>-->
-                               
-                                
-								<?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('footer_social')->toHtml() ?>
-							</div>
-							<div class="left-area">
-								<div class="logo-holder">
-									<strong class="logo"><a href="#"><img alt="CREO" src="<?php echo $this->getSkinUrl() ?>/images/logo02.png"></a></strong>
-									<span class="copyright"><?php echo $this->getCopyright() ?></span>
-								</div>
-								<div class="column column1">
-									<?php $customer = Mage::getModel('cms/block')->load('customer_service'); ?>
-									<h3><?php  echo $customer->getTitle(); ?></h3>
-									<?php echo $customer->getContent(); ?>
-								</div>
-								<div class="column">
-									 <?php $acount = Mage::getModel('cms/block')->load('account_footer'); ?>
-									<h3><?php  echo $acount->getTitle(); ?></h3>
-									<?php echo $acount->getContent(); ?>
-								</div>
-<div class="column">
-<?php $about = Mage::getModel('cms/block')->load('about_us'); ?>
-<h3><?php  echo $about->getTitle(); ?></h3>
-<?php echo $about->getContent(); ?>
-</div>
-<?php
-$paymentlogos = Mage::getModel('cms/block')->load('footer-payment-logos');
-$paymentlogos2 = $this->getLayout()->createBlock('cms/block')->setBlockId('footer-payment-logos')->toHtml();
-if ($paymentlogos2 != '') { ?>
-<div class="column">
-<h3><?php  echo $paymentlogos->getTitle(); ?></h3>
-<?php echo $paymentlogos2; ?>
-</div>
-<?php
-}
-?>
-							</div>
-						</div>
-					</div>
-				</footer>
+			<span class="title">Join us for 20% off your first order</span>
+			<div class="form-row">
+			nn	<input type="text" placeholder="Email Address">
+				<input type="submit" value="JOIN">
+			</div>
+		</form>-->
 
 
-        
-       <?php // echo $this->getCopyright() 
-	   
+		<?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('footer_social')->toHtml() ?>
+	</div>
+	<div class="left-area">
+	<div class="logo-holder">
+	<strong class="logo"><a href="#"><img alt="CREO" src="<?php echo $this->getSkinUrl() ?>/images/logo02.png"></a></strong>
+	<span class="copyright"><?php echo $this->getCopyright() ?></span>
+	</div>
+	<div class="column column1">
+		<?php $customer = Mage::getModel('cms/block')->load('customer_service'); ?>
+		<h3><?php  echo $customer->getTitle(); ?></h3>
+		<?php echo $customer->getContent(); ?>
+	</div>
+	<div class="column">
+	<?php $about = Mage::getModel('cms/block')->load('about_us'); ?>
+	<h3><?php  echo $about->getTitle(); ?></h3>
+	<?php echo $about->getContent(); ?>
+	</div>
+	<div class="column">
+		 <?php $acount = Mage::getModel('cms/block')->load('popular_products'); ?>
+		<h3><?php  echo $acount->getTitle(); ?></h3>
+		<?php echo $acount->getContent(); ?>
+	</div>
+	<div class="column">
+		 <?php $acount = Mage::getModel('cms/block')->load('account_footer'); ?>
+		<h3><?php  echo $acount->getTitle(); ?></h3>
+		<?php echo $acount->getContent(); ?>
+	</div>
+	<div class="column">
+		 <?php $acount = Mage::getModel('cms/block')->load('contact_footer'); ?>
+		<h3><?php  echo $acount->getTitle(); ?></h3>
+		<?php echo $acount->getContent(); ?>
+	</div>
+	<?php /*
+	$paymentlogos = Mage::getModel('cms/block')->load('footer-payment-logos');
+	$paymentlogos2 = $this->getLayout()->createBlock('cms/block')->setBlockId('footer-payment-logos')->toHtml();
+	if ($paymentlogos2 != '') { ?>
+	<div class="column">
+	<h3><?php  echo $paymentlogos->getTitle(); ?></h3>
+	<?php echo $paymentlogos2; ?>
+	</div>
+	<?php
+	}
+	*/
+	?>
+	</div>
+</div>
+</div>
+</footer>
+
+
+
+       <?php // echo $this->getCopyright()
+
 	   // check if user is logged in and already subscribed.
 		$customerEmail = Mage::getSingleton('customer/session')->getCustomer()->getEmail();
 		$subscriber = Mage::getModel('newsletter/subscriber')->loadByEmail($customerEmail);
@@ -95,11 +106,11 @@ var hdata ='';
 var hdata = jQuery(".messages li:first").text();
 var msgType = jQuery(".messages>li").attr("class");
 if(msgType=='error-msg'){
-	var msgTitle = 'Error';	
+	var msgTitle = 'Error';
 }else{
-	var msgTitle = 'Success';	
+	var msgTitle = 'Success';
 }
-			
+
 jQuery( document ).ready( function($){
 	if(hdata){
 
@@ -107,10 +118,10 @@ jQuery( document ).ready( function($){
 			title: msgTitle,
 			confirmButtonClass: 'btn-info',
 			content: hdata, // You can also LOAD the html data using LOAD FROM URL feature,
-			
+
 		});
 	}
-	
+
 	jQuery('#tools-button').find('li').find('a').click(function(){
 	setTimeout(function(){
 	jQuery('#tools-button').find('li').find('a').show();
@@ -120,7 +131,7 @@ jQuery( document ).ready( function($){
 });
 	autoClose: 'cancel|6000',
 	jQuery(".messages").hide();
-	
+
 	function removeProd(){
 		jQuery.confirm({
 			title: msgTitle,
@@ -129,7 +140,7 @@ jQuery( document ).ready( function($){
 			    confirm: function(){
 					return true;
 				}
-			
+
 		});
 		}
 </script>
@@ -165,7 +176,7 @@ jQuery(window).load(function(){
 //        console.log("tar:"+target.text());
 //        //ensure that current one is selected as well
 //    }
-}); 
+});
 /*setTimeout(function(){
     //alert("test");
     var currentval = jQuery('#currentvalue').text().trim();
