--- a/app/design/frontend/creo/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view.phtml
@@ -37,8 +37,7 @@
 <div id="messages_product_view"><?php echo $this->getMessagesBlock()->toHtml() ?></div>
 <div class="row">
 
-<?php 
-
+<?php
 if($_product->stock_item->is_in_stock == 0){
 	$outofstockclass = "outofstockclass ";
  } ?>
@@ -134,34 +133,49 @@ if($_product->stock_item->is_in_stock == 0){
                     <ul class="tabset tabset1">
                         <li class="active"><a href="#tab1"><span>
                                     <?php echo $attribute = $_product->getResource()->getAttribute('description')->getFrontendLabel(); ?></span></a></li>
+                        <li class=""><a href="#tab3"><span><?php echo $attribute = $_product->getResource()->getAttribute('design')->getFrontendLabel(); ?></span></a></li>
                         <li class="">
-                            <a href="#tab2"><span>
+                            <a href="#" data-toggle="modal" data-target="#sizeGuide"><span>
                                     SIZE GUIDE
                                     <?php //echo $attribute = $_product->getResource()->getAttribute('short_description')->getFrontendLabel(); ?>
                                 </span></a>
                         </li>
-                        <li class=""><a href="#tab3"><span><?php echo $attribute = $_product->getResource()->getAttribute('design')->getFrontendLabel(); ?></span></a></li>
                     </ul>
                     <div class="tab-content">
                         <div id="tab1" style="display: block;" class="">
                             <p><?php print $_product->getDescription(); ?> </p>
                         </div>
                         <div id="tab2" style="display: none; width: 715px;" class="js-tab-hidden">
-                            <?php
-                            $gender = $_product->getGender();
-                            if ($gender == 24) {
-                                echo $_product->getSizeguidemen();
-                                //echo "Men";
-                            } elseif ($gender == 25) {
-                                //echo "Women";
-                                echo $_product->getSizeguidewomen();
-                            } else {
-                                echo " ";
-                            }
-                            ?> 
+                            <p><?php print $_product->getDesign(); ?> </p>
                         </div>
                         <div id="tab3" style="display: none; width: 715px;" class="js-tab-hidden">
-                            <p><?php print $_product->getDesign(); ?> </p>
+<!-- Modal -->
+<div class="modal fade" id="sizeGuide" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <div class="modal-holder">
+      <div class="modal-body">
+    <?php
+            $gender = $_product->getGender();
+            if ($gender == 24) {
+                echo $_product->getSizeguidemen();
+                //echo "Men";
+            } elseif ($gender == 25) {
+                //echo "Women";
+                echo $_product->getSizeguidewomen();
+            } else {
+                echo " ";
+            }
+            ?>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
+
+
+
                         </div>
                     </div>
                     <div class="options-area">
@@ -180,7 +194,8 @@ if($_product->stock_item->is_in_stock == 0){
                         <!--<a class="shipping-info" href="#">Shipping Information</a>-->
                         <p><?php print $_product->getShippingDetails(); ?> </p>
                     </div> 
-                    <?php // jawwad.nissar work ends  ?>                     
+
+                    <?php // jawwad.nissar work ends  ?>
                     <!--                    <div class="shipping-area"> 
                     <?php
 //                        $methods = Mage::getSingleton('shipping/config')->getActiveCarriers();
@@ -269,9 +284,8 @@ if($_product->stock_item->is_in_stock == 0){
                                 jQuery('.fme_loading_filters').hide();
                                         //alert(data.status + ": " + data.message);
                                         if (jQuery('#header-cart')) {
-                                
-								if(data.status != "ERROR"){
-								jQuery('#open-close-minicart').html('<a href="javascript:void(0)" class="opener"><span class="count">' + data.qty + '</span>My Cart</a>' + data.minicart);
+			if(data.status != "ERROR"){
+			jQuery('#open-close-minicart').html('<a href="javascript:void(0)" class="opener"><span class="count">' + data.qty + '</span>My Cart</a>' + data.minicart);
                                 }
                                 /*initialize the minicart dropdown again*/
                                 jQuery('#open-close-minicart').openClose({
@@ -282,41 +296,40 @@ if($_product->stock_item->is_in_stock == 0){
                                         event: 'over',
                                         effect: 'fade'
                                 });
-								jQuery('#ajaxModalTitle').html(data.status);
-								jQuery('#ajaxModalContent').html(data.message);
-								jQuery('.ajaxAddToCartModal').modal('show');
-								
-                                        //refresh minicart
-										var data = jQuery('#product_addtocart_form').serialize();
-										data += '&isRefresh=1';
-										try {
-										jQuery.ajax({
-										url: url,
-												dataType: 'json',
-												type : 'post',
-												data: data,
-												success: function(data){
-										if(data.status != "ERROR"){
-										jQuery('#open-close-minicart').html('<a href="javascript:void(0)" class="opener"><span class="count">' + data.qty + '</span>My Cart</a>' + data.minicart);
-										}
-												if (jQuery('#header-cart')) {
-												/*initialize the minicart dropdown again*/
-												jQuery('#open-close-minicart').openClose({
-												activeClass: 'active',
-														opener: '.opener',
-														slider: '.slide',
-														animSpeed: 400,
-														event: 'over',
-														effect: 'fade'
-												});
-														}
-												}
-										});
-										} catch (e) {
-								}
-										//refresh minicart
-										}
-								}
+		jQuery('#ajaxModalTitle').html(data.status);
+		jQuery('#ajaxModalContent').html(data.message);
+		jQuery('.ajaxAddToCartModal').modal('show');
+                //refresh minicart
+		var data = jQuery('#product_addtocart_form').serialize();
+		data += '&isRefresh=1';
+		try {
+		jQuery.ajax({
+		url: url,
+		dataType: 'json',
+		type : 'post',
+		data: data,
+		success: function(data){
+		if(data.status != "ERROR"){
+		jQuery('#open-close-minicart').html('<a href="javascript:void(0)" class="opener"><span class="count">' + data.qty + '</span>My Cart</a>' + data.minicart);
+		}
+		if (jQuery('#header-cart')) {
+		/*initialize the minicart dropdown again*/
+		jQuery('#open-close-minicart').openClose({
+		activeClass: 'active',
+		opener: '.opener',
+		slider: '.slide',
+		animSpeed: 400,
+		event: 'over',
+		effect: 'fade'
+		});
+				}
+		}
+		});
+			} catch (e) {
+		}
+			//refresh minicart
+			}
+		}
                         });
                         } catch (e) {
                 }
